doc added, typos fixed, infinity changed

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -134,7 +134,7 @@
 					<!-- single slide -->
 					<div class="item active" style="background-image: url(/img/banner.jpg);">
 						<div class="carousel-caption">
-							<h2 data-wow-duration="1000ms" data-wow-delay="1000ms" class="wow bounceInDown animated"><span> Infin<font font-size="700" color="#0d84b4">&infintie;</font> 2018</span></h2>
+							<h2 data-wow-duration="1000ms" data-wow-delay="1000ms" class="wow bounceInDown animated"><span> Infin<font font-size="700" color="#0d84b4">∞</font> 2018</span></h2>
 							<!--<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">INSPIRE</span> and be Inspired!</h3>-->
               <h3 data-wow-duration="1000ms" class="wow slideInLeft animated">IMAGINE | INVIGORATE | INSPIRE</h3>
 
@@ -213,7 +213,7 @@
 
 							<div class="service-desc">
 								<h3>About Us</h3>
-								<p>Infin8 is the annual cultural-tech fest of IIIT Bangalore. A three day fest organized by the students of IIIT-b,we aim to bring science to students through fun.</p>
+								<p>Infin8 is the annual cultural-tech fest of IIIT Bangalore. A three day fest organized by the students of IIIT-Bangalore,we aim to bring science to students through fun.</p>
 
 							</div>
 						</div>
@@ -761,7 +761,7 @@ c. Relevance</br></br>
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -818,7 +818,7 @@ c. Relevance</br></br>
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -875,7 +875,7 @@ c. Relevance</br></br>
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -937,7 +937,7 @@ who is saved.</p>
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -999,7 +999,7 @@ who is saved.</p>-->
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -1059,7 +1059,7 @@ who is saved.</p>-->
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -1121,7 +1121,7 @@ who is saved.</p>-->
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
@@ -1174,12 +1174,16 @@ who is saved.</p>-->
 
                     <p class="item-intro">- brought to you by Dance club of iiitb.</p>
                     <img class="img-responsive img-centered" src="/img/portfolio/08-preview.jpg" alt="">
-                    <p style =" font-size:140%;">Legs tapping on the floor to the Punjabi music in the air and yet not confident enough to turn up on the dance floor? Have no fear as a Dance Workshop (Bollywood Style),   by Mr Abhishek Anand, a world-class choreographer, is all set for you in this Infin8 - 2018. Do check out his profile below, because if that's not going to force you to come to the workshop then we don't know what will.</p>
+                    <p style =" font-size:140%;">Legs tapping on the floor to the Punjabi music in the air and yet not confident enough to turn up
+                        on the dance floor? Have no fear as a Dance Workshop (Bollywood Style),by <a href="/pdf/Abhishek Anand Profile.docx" download> Mr Abhishek Anand</a> , a world-class choreographer,
+                        is all set for you in this Infin8 - 2018. Do check out his profile below, because if that's not going to force you to come
+                        to the workshop then we don't know what will.
+                    </p>
                     <!--<ul class="list-inline">
                       <li><strong>Client</strong>: John Doe</li>
                       <li><strong>Category</strong>: Web Design</li>
                     </ul>-->
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
               </div>
