Updated trick or treat

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1113,7 +1113,10 @@ who is saved.</p>-->
 
                     <p class="item-intro">"I dream my painting and I paint my dreams."</p>
                     <img class="img-responsive img-centered" src="/img/portfolio/08-preview.jpg" alt="">
-                    <p style =" font-size:140%;"><strong>3-D Painting!</strong> Doesn't that seem interesting? Participate and deceit us to conquer...</br>Paint your 3-D ideas on a 2-D sheet. Paint your imaginations using your own brushes and colors.</br>And be ready for <strong>Battle of the Brush.</strong> </br></p><!--</br></br><strong><u>RULES</u></strong></br></p>
+                    <p style =" font-size:140%;">From interesting themes to different modes of painting, let's take this competition to a whole new exciting level.
+Think out of the box and paint your imaginations
+<br></br>PS: Brushes not to be used.
+So get your partner and be ready for a battle of paints.</br></p><!--</br></br><strong><u>RULES</u></strong></br></p>
                     <p align="left" style ="font-size:120%;">1. Each round will be held in group
 s.</br></br>2. Each player in a group will be given a character on a sinking ship; only one of them can be saved.</br></br>3. Depending on the characters, the participant has to justify why they should be the one
 who is saved.</p>-->
