Added google analytics

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1400,6 +1400,16 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 			);
 			wow.init();
 		</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112532931-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112532931-1');
+</script>
+
 		<!-- Custom Functions -->
         <script src="/js/custom.js"></script>
 
