Updated rules for trick or treat

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1116,7 +1116,15 @@ who is saved.</p>-->
                     <p style =" font-size:140%;">From interesting themes to different modes of painting, let's take this competition to a whole new exciting level.
 Think out of the box and paint your imaginations
 <br></br>PS: Brushes not to be used.
-So get your partner and be ready for a battle of paints.</br></p><!--</br></br><strong><u>RULES</u></strong></br></p>
+So get your partner and be ready for a battle of paints.</br></p></br><strong><u>RULES</u></strong></br></p>
+<p align="left" style ="font-size:120%;">1.  It is a painting competition and is one of the main events in infin8.</br></br>
+2. One can participate solo or in a team consisting two members only.</br></br>
+3. The team will be given a theme and the mode of painting(spray, straw, hand etc) on the spot.</br></br>
+4. The competition duration will be 2:30 hrs.</br></br>
+5. There will be two winners(1st and 2nd position) and will be awarded with prizes.</br></br>
+6. The decision of the winner will be taken by the jury. </br></br>
+7. The team will be judged on the basis of their creativity and on efficient use of the mode assigned to them. </br></br>
+</p><!--</br></br><strong><u>RULES</u></strong></br></p>
                     <p align="left" style ="font-size:120%;">1. Each round will be held in group
 s.</br></br>2. Each player in a group will be given a character on a sinking ship; only one of them can be saved.</br></br>3. Depending on the characters, the participant has to justify why they should be the one
 who is saved.</p>-->
