--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1291,14 +1291,7 @@ who is saved.</p>-->
                     5. Any mishap or destruction of the college property will be the responsibility of the team. You will be immediately disqualified and be penalised by the college authority.</br></br>
                     6. The decision of the winner will be taken by the jury. </br></br>
                     7. It's gonna be a long night so, we hope you had a heavy dinner.</br></br>
-                    </p><!--</br></br><strong><u>RULES</u></strong></br></p>
-                    <p align="left" style ="font-size:120%;">1. Each round will be held in group
-s.</br></br>2. Each player in a group will be given a character on a sinking ship; only one of them can be saved.</br></br>3. Depending on the characters, the participant has to justify why they should be the one
-who is saved.</p>-->
-                    <!--<ul class="list-inline">
-                      <li><strong>Client</strong>: John Doe</li>
-                      <li><strong>Category</strong>: Web Design</li>
-                    </ul>-->
+                    </p>
                     <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
@@ -1337,23 +1330,15 @@ who is saved.</p>-->
                           <input hidden id="reg_event_id" name="reg[event_id]" value='<%= @eventId %>'>
                           <input hidden id="reg_user_id" name="reg[user_id]" value="<%= @user.id %>">
                             <%if Event.find(@eventId).is_team %>
-                            <p>
-                                1v1 Registration:
-                            </p>
-                              <label>Team Name:</label>
+                              <label>Team Name for 1v1 registrations:</label>
                               <input id="reg_team_name" name="reg[team_name]">
                             <%else%>
-                            <p>
-                                1v1 Registration:
-                            </p>
+                              <label>1v1 registrations:</label>
                                 <input id="reg_team_name" name="reg[team_name]" hidden value=null>
                             <%end%>
                             <input type="submit" value="Register for this">
                       </form>
                       <% else %>
-                      <p>
-                          1v1 Registration:
-                      </p>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
@@ -1375,7 +1360,7 @@ who is saved.</p>-->
                           <input hidden id="reg_event_id" name="reg[event_id]" value='<%= @eventId %>'>
                           <input hidden id="reg_user_id" name="reg[user_id]" value="<%= @user.id %>">
                             <%if Event.find(@eventId).is_team %>
-                              <label>Team Name:</label>
+                            <label>Team Name for 2v2 registrations:</label>
                               <input id="reg_team_name" name="reg[team_name]">
                             <%else%>
                                 <input id="reg_team_name" name="reg[team_name]" hidden value=null>
@@ -1389,7 +1374,7 @@ who is saved.</p>-->
                       <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
-                    <p align="left" style ="font-size:120%;">
+                    <!-- <p align="left" style ="font-size:120%;">
                         Football fan but too lazy to play outside! Chillout, we got FIFA for you!<br><br>
                         <strong>RULES </strong>(for both 1v1 and 2v2): <br><br>
                         •	Standard rules apply.<br>
@@ -1401,6 +1386,23 @@ who is saved.</p>-->
                         •	Keyboards are not allowed, only gamepads will be used in the event.<br>
                         •	Decision by the organizer is final.<br><br>
                         <strong>NOTE: </strong>Standard gaming gear will be provided, but you are most welcome to get your own(RGB lit stuff).
+                    </p>
+                     -->
+                     <br>
+                    <p style =" font-size:140%;">
+                      Football fan but too lazy to play outside! Chillout, we got FIFA for you!<br><br>
+                    <u><strong>RULES </strong>(for both 1v1 and 2v2):</strong></u>
+                  </p>
+                    <p align="left" style ="font-size:120%;">
+                      •	Standard rules apply.<br>
+                      •	5 mins half (till semis)<br>
+                      •	Finals time(depends on the finalists).<br>
+                      •	World 11 and adidas 11 not allowed.<br>
+                      •	Difficulty-world class, match speed-normal.<br>
+                      •	Camera angle- decided by the organizer.<br>
+                      •	Keyboards are not allowed, only gamepads will be used in the event.<br>
+                      •	Decision by the organizer is final.<br><br>
+                      <strong>NOTE: </strong>Standard gaming gear will be provided, but you are most welcome to get your own(RGB lit stuff).
                     </p>
 
                     <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
@@ -1441,9 +1443,10 @@ who is saved.</p>-->
                           <input hidden id="reg_event_id" name="reg[event_id]" value='<%= @eventId %>'>
                           <input hidden id="reg_user_id" name="reg[user_id]" value="<%= @user.id %>">
                             <%if Event.find(@eventId).is_team %>
-                              <label>Team Name:</label>
+                            <label>Team Name for 2v2 registrations:</label>
                               <input id="reg_team_name" name="reg[team_name]">
                             <%else%>
+                            <label>2v2 registrations:</label>
                                 <input id="reg_team_name" name="reg[team_name]" hidden value=null>
                             <%end%>
                             <input type="submit" value="Register for this">
@@ -1470,9 +1473,10 @@ who is saved.</p>-->
                           <input hidden id="reg_event_id" name="reg[event_id]" value='<%= @eventId %>'>
                           <input hidden id="reg_user_id" name="reg[user_id]" value="<%= @user.id %>">
                             <%if Event.find(@eventId).is_team %>
-                              <label>Team Name:</label>
+                            <label>Team Name for 5v5 registrations:</label>
                               <input id="reg_team_name" name="reg[team_name]">
                             <%else%>
+                            <label>5v5 registrations:</label>
                                 <input id="reg_team_name" name="reg[team_name]" hidden value=null>
                             <%end%>
                             <input type="submit" value="Register for this">
@@ -1484,7 +1488,7 @@ who is saved.</p>-->
                       <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
-                    <p align="left" style ="font-size:120%;">
+                    <!-- <p align="left" style ="font-size:120%;">
                         Got that killer instict but don't want no jail time!<br><br>
                         <strong>RULES </strong>: <br><br>
                         •	Standard competitive match making rules apply.<br>
@@ -1502,6 +1506,28 @@ who is saved.</p>-->
 
                         <strong>NOTE: </strong>Standard gaming gear will be provided, but you are most welcome to get your own(RGB lit stuff).Also get earphones for counterstrike.
                     </p>
+                     -->
+                    <br>
+                   <p style =" font-size:140%;">
+                     Got that killer instict but don't want no jail time!<br><br>
+                 </p>
+                   <p align="left" style ="font-size:120%;">
+                     <u><strong>RULES </strong>:</strong></u><br><br>
+                     •	Standard competitive match making rules apply.<br>
+                     •	No weapons are prohibited.<br>
+                     •	Veto to decide the maps.<br>
+                     •	Best of one till quarters, best of 3 for semis, best of 5 for finals.  <br><br>
+
+                     <strong>2v2</strong><br>
+                     •	Terrorists have to call the bombsite in the freeze time. The bomb can only be planted at that bomb site only.<br>
+                     •	No restriction in the movement in the map.<br><br>
+
+                     <strong>5v5</strong><br>
+                     •	Standard competitive match making rules apply.<br>
+                     •	Maps decides through veto.<br><br>
+
+                     <strong>NOTE: </strong>Standard gaming gear will be provided, but you are most welcome to get your own(RGB lit stuff).Also get earphones for counterstrike.
+                 </p>
                     <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Back</button>
                   </div>
                 </div>
