--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -378,7 +378,29 @@
                         </figcaption>
                     </figure>
                 </a>
+                <a href="#portfolioModal13" class="portfolio-link" data-toggle="modal">
+                    <figure class="mix work-item lan_gaming">
+                        <img src="/img/works/fifa.jpg" alt="">
+                        <figcaption class="overlay" style="padding-top:30%;padding-bottom30%">
+                            <p>
+                                <h4>FIFA</h4>
+                                <h4>LAN Gaming</h4>
+                            </p>
+                        </figcaption>
+                    </figure>
+                </a>
 
+                <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
+                    <figure class="mix work-item lan_gaming">
+                        <img src="/img/works/csgo1.jpg" alt="">
+                        <figcaption class="overlay" style="padding-top:30%;padding-bottom30%">
+                            <p>
+                                <h4>CSGO</h4>
+                                <h4>LAN Gaming</h4>
+                            </p>
+                        </figcaption>
+                    </figure>
+                </a>
                 <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
     				<figure class="mix work-item lsd">
     					<img src="/img/works/tot.png" alt="">
@@ -414,28 +436,8 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#portfolioModal13" class="portfolio-link" data-toggle="modal">
-                    <figure class="mix work-item lan_gaming">
-                        <img src="/img/works/fifa.jpg" alt="">
-                        <figcaption class="overlay" style="padding-top:30%;padding-bottom30%">
-                            <p>
-                                <h4>FIFA</h4>
-                                <h4>LAN Gaming</h4>
-                            </p>
-                        </figcaption>
-                    </figure>
-                </a>
-                <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
-                    <figure class="mix work-item lan_gaming">
-                        <img src="/img/works/CSGO.jpg" alt="">
-                        <figcaption class="overlay" style="padding-top:30%;padding-bottom30%">
-                            <p>
-                                <h4>CSGO</h4>
-                                <h4>LAN Gaming</h4>
-                            </p>
-                        </figcaption>
-                    </figure>
-                </a>
+
+
 			</div>
 
 		</section>
