--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -9,11 +9,11 @@
 		<!-- Always force latest IE rendering engine or request Chrome Frame -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<!-- Page Title -->
-        <title>Infin&infintie;</title>
+        <title>Infin8</title>
 		<!-- Meta Description -->
-        <meta name="description" content="Blue One Page Creative HTML5 Template">
-        <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
-        <meta name="author" content="Muhammad Morshed">
+        <meta name="description" content="Annual cultural-tech fest of IIIT Bangalore.">
+        <!-- <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation"> -->
+        <meta name="author" content="Vishesh Ruparelia, Vibhav Agarwal, Atibhi Agarwal, Mudita Baid">
 		<!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
