Login to register status changed and dj tab removed

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -265,15 +265,12 @@
 					<div class="work-filter wow fadeInRight animated" data-wow-duration="500ms">
 						<ul class="text-center">
 							<li><a href="javascript:;" data-filter="all" class="active filter">All</a></li>
-							<!--<li><a href="javascript:;" data-filter=".enigma" class="filter">Robotics</a></li>-->
 							<li><a href="javascript:;" data-filter=".photo" class="filter">Photography</a></li>
 							<li><a href="javascript:;" data-filter=".cite" class="filter">Cite.</a></li>
 							<li><a href="javascript:;" data-filter=".music" class="filter">Musicals</a></li>
 							<li><a href="javascript:;" data-filter=".cp" class="filter">Coding</a></li>
 							<li><a href="javascript:;" data-filter=".dance" class="filter">Dance</a></li>
-						<!--	<li><a href="javascript:;" data-filter=".drama" class="filter">Dramatics</a></li>-->
 							<li><a href="javascript:;" data-filter=".lsd" class="filter">LSD</a></li>
-							<li><a href="javascript:;" data-filter=".dj" class="filter">DJ Night</a></li>
                             <li><a href="javascript:;" data-filter=".lan_gaming" class="filter">LAN Gaming</a></li>
 
 						</ul>
@@ -1344,7 +1341,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
+                      <p><h6><%= link_to "Login to register for 1v1", new_user_session_path %></h6><p>
                     <% end %>
                     <% if user_signed_in? %>
                       <% @is_true=0 %>
@@ -1373,7 +1370,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
+                      <p><h6><%= link_to "Login to register for 2v2", new_user_session_path %></h6><p>
                     <% end %>
 
                     <!-- <p align="left" style ="font-size:120%;">
@@ -1457,7 +1454,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
+                      <p><h6><%= link_to "Login to register for 2v2", new_user_session_path %></h6><p>
                     <% end %>
                     <% if user_signed_in? %>
                       <% @is_true=0 %>
@@ -1487,7 +1484,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
+                      <p><h6><%= link_to "Login to register for 5v5", new_user_session_path %></h6><p>
                     <% end %>
 
                     <!-- <p align="left" style ="font-size:120%;">
